--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/src/style.css" rel="stylesheet">
     <title>devtinder-web</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="text-3xl"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
